syntax = "proto3";
package data;

service ChordNode {
    rpc Insert(InsertRequest) returns (InsertResponse);
    rpc Join(JoinRequest) returns (JoinResponse);
    rpc Lookup(LookupRequest) returns (LookupResponse);
}

message Error {
    string text = 1;
}

message InsertRequest {
    string key = 1;
    string value = 2;
}

message InsertResponse {
    Error error = 1;
}

message JoinRequest {
    string nodeId = 1;
}

message JoinResponse {
    Error error = 1;
}

message LookupRequest {
    string key = 1;
    string origin = 2;
}

message LookupResponse {
    Error error = 1;
    string value = 2;
}
